--- a/templates/puppetmaster.conf
+++ b/templates/puppetmaster.conf
@@ -26,7 +26,7 @@ Listen 8140
 <% if @ca_enabled == false -%>
     SSLProxyEngine On
     # Proxy all requests that start with things like /production/certificate to the CA
-    ProxyPassMatch ^/([^/]+/certificate.*)$ https://<%= @server %>:8140/$1
+    ProxyPassMatch ^/([^/]+/certificate.*)$ https://<%= @ca_server %>:8140/$1
 
     <Location ~ "/[^/]+/certificate">
       PassengerHighPerformance Off
